# HierarchicalAgentTeams

./: .gitignore  README.md
backend/: hierarchical_agent_teams.py  main.py  pyproject.toml  streaming.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ChatDisplay.vue  InputArea.vue
